--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -36,7 +36,7 @@
            
         </td>
         <td>
-            {{articulo.fechaBodega | date: "dd/MM/y"}}
+            {{articulo.fechaBodega | date: "dd/MM/y" : "-0500"}}
         </td>
         <td>
             {{articulo.trackbox}}
