--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -15,7 +15,8 @@
         <th>Vol(Vlb)</th>
         <th>Valor(USD)</th>
         <th>Documento</th>
-        <th>TRK</th>
+        <th>En Tránsito</th>
+        <th>Acciones</th>
     </tr>
     </thead>
     <tbody>
@@ -29,7 +30,7 @@
            
         </td>
         <td>
-            {{articulo.fecha_embarque | date: "dd/MM/y"}}
+            {{articulo.fecha_embarque | date: "dd/MM/y" : "-0500"}}
         </td>
         <td>
             {{articulo.trackbox}}
@@ -70,7 +71,13 @@
         </td>
       <td *ngIf="articulo.estado_articulo && articulo.estado_articulo.id == 3"><i class="fa fa-check m-badge m-badge--info m-badge--wide"  style="color: white; background-color: #4f9e35"></i></td>
       <td *ngIf="articulo.estado_articulo && articulo.estado_articulo.id != 3"><i class="fa fa-check m-badge m-badge--info m-badge--wide"  style="color: white; background-color: #1e1111"></i></td>
-
+        <td> 
+        <div class="row">
+            <div class="col-md-1">
+            <i class="fa fa-edit m--font-info" title="Editar Embarque" style="cursor: pointer;" (click)="onEmbarcar(embarcar,articulo.id)"></i>
+            </div>
+        </div>
+        </td>
     </tr>
     </tbody>
 </table>
@@ -288,3 +295,216 @@
 </ng-template>
 <!--end::Modal-->
 
+
+<!--begin::View  Modal-->
+<ng-template #embarcar let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Embarcar</h4>
+        <button type="button" class="close" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="m-portlet__head-caption">
+            <div class="m-list-settings">
+                <div class="row" style="margin: 5px">
+                    <h3>Se embarcarán estos artículos</h3>
+                </div>
+                <div class="table-responsive">
+                <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
+                    <thead>
+                    <tr>
+                        <th>
+                            TRACKBOX
+                        </th>
+                        <th>
+                            Track Remitente
+                        </th>
+                        <th>Descripción </th>
+                         <th>
+                            Piezas
+                        </th>
+                          <th>
+                            Dimensiones(In)
+                        </th>
+                        <th>
+                            Peso(Lb)
+                        </th>
+                      
+                        <th>
+                            Costo(USD)
+                        </th>    
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let articulo of articulos">
+                        
+                        <td>
+                            <p *ngIf="articulo.trackbox">{{ articulo.trackbox }}</p>
+                            <i class="fa fa-warning" *ngIf="!articulo.trackbox"></i>
+                        </td>
+                         <td>
+                            {{ articulo.tracking }}
+                        </td>
+                          <td>{{ articulo.descripcion }}</td>
+                           <td>
+                            {{ articulo.piezas }}
+                        </td>
+                         <td>
+                            {{ articulo.largo }}x{{articulo.ancho}}x{{articulo.alto}}
+                        </td>
+                        <td>
+                            {{ articulo.peso | number:'1.2-2' }}
+                        </td>
+                       
+                        <td>
+                            {{ articulo.precio }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="5" style="text-align: center;"><h4>Total</h4></td>
+                        <td>{{ totalPeso }}</td>
+                        <td>{{ totalPrecio }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+                </div>
+                <div *ngIf="existeRemitente"
+                class="col-12"
+                style="background-color: #676c7bd8; color: white; margin: 3px"
+                >
+                    <span>Debe seleccionar Remitente porque no coinciden los artículos seleccionados.</span>
+                </div>
+                <div *ngIf="existeImporter"
+                class="col-12"
+                style="background-color: #676c7bd8; color: white; margin: 3px"
+                >
+                    <span>Debe seleccionar Importer porque no coinciden los artículos seleccionados.</span>
+                </div>
+                <div class="row" style="margin: 5px">
+                    <h4>Puede cambiar los datos de embarque sino se tomarán los iniciales por defecto</h4>
+                </div>
+                <form class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed"
+                      #embarcarForm="ngForm"  (submit)="onSubmitEmbarcar(embarcarForm.value)">
+                    <div class="m-portlet__body">
+                   
+                    <div class="form-group m-form__group row" style="padding-top:10px !important;">
+                            <label class="col-lg-3 col-form-label">
+                                Remitente:
+                            </label>
+                            <div class="col-lg-4">
+                                <input type="text" class="form-control m-input" placeholder="Tienda o Usuario NO REGISTRADO"
+                                [(ngModel)]="text"  #remitente_text="ngModel"
+                                name="remitente_text" (keyup)= "validarForm()"
+                                >
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios">
+                                    <input type="text" class="form-control"/>
+                                </div>
+                                <app-auto-complete *ngIf="usuarios" placeholder="SOLO PARA MIGRANTES"
+                                                    [(ngModel)]="remitente_usuario" #remitente_id="ngModel"
+                                                    name="remitente_id"  [items]="usuarios"
+                                                    [textField]="'numero_identidad'"
+                                                    textField1="nombre"
+                                                    textField2="apellido"
+                                                    valueField="numero_identidad"
+                                                    [isModal]="true"
+                                                    (change)= "validarForm()"
+                                ></app-auto-complete>
+                            </div>
+                         
+                        </div>
+                        <div class="form-group m-form__group row">
+                           
+                            <label class="col-lg-3 col-form-label">
+                                Consignatario*:
+                            </label>
+                            <div class="col-lg-4">
+                                <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios_importer">
+                                    <input type="text" class="form-control"/>
+                                </div>
+                                <app-auto-complete *ngIf="usuarios_importer" placeholder="Seleccione"
+                                                    [(ngModel)]="importer_usuario" #importer="ngModel"
+                                                    name="importer" [items]="usuarios_importer"
+                                                    [textField]="'numero_identidad'"
+                                                    textField1="nombre"
+                                                    textField2="apellido"
+                                                    valueField="numero_identidad"
+                                                    [isModal]="true"
+                                                    (change)= "validarForm()"
+                                ></app-auto-complete>
+                            </div>
+                            <label class="col-lg-3 col-form-label">
+                                Unidades Físicas:
+                             </label>
+                             <div class="col-lg-2">
+                                 <h5 *ngIf="dv" class="text-left" style="margin-top: 10px;">{{ unidades }} </h5>
+                                 <input type="number" min="0" *ngIf="!dv" class="form-control m-input" placeholder="Unidades"
+                                 [(ngModel)]="unidades"  #unidad="ngModel"
+                                 name="unidad" required
+                                 > 
+                             </div>
+                        </div>
+                        <div class="form-group m-form__group row" *ngIf="!consolidadoArt">
+                        <label class="col-lg-3 col-form-label">
+                            Descripción:
+                         </label>
+                         <div class="col-lg-9">
+                             <input type="text" class="form-control m-input" placeholder="Dejar en blanco si es la misma del artículo"
+                             [(ngModel)]="descripcionembarque"  #descripcion="ngModel"
+                             name="descripcion"
+                             > 
+                         </div>
+                        </div>
+                        <div class="form-group m-form__group row">
+                           
+                            <label class="col-lg-3 col-form-label">
+                                Categoría o partida arancelaria:
+                            </label>
+                            <div class="col-lg-9">
+                                <input type="text" maxlength="255" class="form-control m-input" placeholder="Categoría o partida arancelaria"
+                                [(ngModel)]="notaembarque"  #nota="ngModel"
+                                name="nota"
+                                > 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
+                        <div class="m-form__actions m-form__actions--solid">
+                            <div class="row" *ngIf="mensaje">
+                                <div class="col-lg-1"></div>
+                                <div class="col-lg-11">
+                                   <h4>¿Está seguro de embarcar?</h4>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-2"></div>
+                                <div class="col-lg-10">
+                                    <button *ngIf="!confirmar"
+                                            [disabled]="validar || unidades == 0"
+                                            [class]="(embarcarForm.invalid == false) ? 'btn btn-success' : 'btn btn-danger'"
+                                            >
+                                        Guardar
+                                    </button>
+                                    <button *ngIf="confirmar"
+                                        [disabled]="validar || unidades == 0"
+                                        [class]="(embarcarForm.invalid == false) ? 'btn btn-success' : 'btn btn-danger'"
+                                        type="submit">
+                                        SI
+                                    </button> 
+                                    <button *ngIf="confirmar" class="btn btn-secondary"
+                                    (click)="negadaConfirmacion()">
+                                        NO
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</ng-template>
+<!--end::Modal-->
