--- a/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
@@ -18,7 +18,7 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            {{articulo.fechaGuia ? (articulo.fechaGuia | date: "dd/MM/y" : "-0500") : (articulo.fechaGuiaEnt | date: "dd/MM/y" : "-0500") }}
+            {{articulo.fechaGuiaEnt ? (articulo.fechaGuiaEnt | date: "dd/MM/y" : "-0500") : (articulo.fechaGuia | date: "dd/MM/y" : "-0500") }}
         </td>
         <td>
             {{ articulo.trackbox }}
@@ -98,13 +98,13 @@
                     {{item.recibo}}
                 </td>
                 <td>
-                    {{ item.nombre ? item.nombre : item.nombreEnt }}
+                    {{ item.nombreEnt ? item.nombreEnt : item.nombre }}
                 </td>
                 <td>
-                    {{ item.guia ? item.guia : item.guiaEnt }}
+                    {{ item.guiaEnt ? item.guiaEnt : item.guia }}
                 </td>
                 <td>
-                    {{item.fechaGuia ? (item.fechaGuia | date: "dd/MM/y" : "-0500") :  (item.fechaGuiaEnt | date: "dd/MM/y" : "-0500")}}
+                    {{item.fechaGuiaEnt ? (item.fechaGuiaEnt | date: "dd/MM/y" : "-0500") :  (item.fechaGuia | date: "dd/MM/y" : "-0500")}}
                 </td>
             </tr>
             </tbody>
