--- a/src/app/theme/pages/default/mi-casillero/estatus-datatable/estatus-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/estatus-datatable/estatus-datatable.component.html
@@ -380,13 +380,14 @@
                                 Provincia:
                             </label>
                             <div class="col-lg-3">
-                                <select  class="form-control m-input" placeholder="Provincia" (change)="getCiudadesR(provinciaRetiro_id.value)"
-                                        [(ngModel)]="entrega.ciudad_retiro.provincia.id" #provinciaRetiro_id="ngModel" name="provinciaRetiro_id">
-                                    <option [value]="" disabled>Seleccione una Provincia</option>
-                                    <option *ngFor="let provincia of provinciasR" [value]="provincia.id" >
-                                        {{provincia.nombre}}
-                                    </option>
-                                </select>
+                                <app-auto-complete *ngIf="provinciasR" placeholder="Seleccione"
+                                [(ngModel)]="entrega.ciudad_retiro.provincia.id" #provinciaRetiro_id="ngModel"
+                                name="provinciaRetiro_id" required [items]="provinciasR"
+                                (change)="getCiudadesR(provinciaRetiro_id.value)"
+                                [textField]="'nombre'"
+                                valueField="id"
+                                 ></app-auto-complete>
+                           
                             </div>
                         </div>
                         <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0">
@@ -394,13 +395,13 @@
                                 Ciudad:
                             </label>
                             <div class="col-lg-4">
-                                <select  class="form-control m-input" placeholder="Ciudad" 
-                                        [(ngModel)]="entrega.ciudad_retiro.id" #ciudadRetiro_id="ngModel" name="ciudadRetiro_id">
-                                    <option [value]="" disabled>Seleccione una Ciudad</option>
-                                    <option *ngFor="let ciudad of ciudadesR" [value]="ciudad.id" >
-                                        {{ciudad.nombre}}
-                                    </option>
-                                </select>
+                                <app-auto-complete *ngIf="ciudadesR" placeholder="Seleccione"
+                                [(ngModel)]="entrega.ciudad_retiro.id" #ciudadRetiro_id="ngModel"
+                                name="ciudadRetiro_id" required [items]="ciudadesR"
+                                [textField]="'nombre'"
+                                valueField="id"
+                                 ></app-auto-complete>
+                               
                             </div>
                             <div class="col-lg-5">
                                 <input type="text" class="form-control m-input" placeholder="Ciudad"
@@ -538,13 +539,14 @@
                                 Provincia:
                             </label>
                             <div class="col-lg-3">
-                                <select  class="form-control m-input" placeholder="Provincia" (change)="getCiudades(provincia_id.value)"
-                                        [(ngModel)]="entrega.ciudad.provincia.id" #provincia_id="ngModel" name="provincia_id" required>
-                                    <option [value]="" disabled>Seleccione una Provincia</option>
-                                    <option *ngFor="let provincia of provincias" [value]="provincia.id" >
-                                        {{provincia.nombre}}
-                                    </option>
-                                </select>
+                                <app-auto-complete *ngIf="provincias" placeholder="Seleccione"
+                                [(ngModel)]="entrega.ciudad.provincia.id" #provincia_id="ngModel"
+                                name="provincia_id" required [items]="provincias"
+                                (change)="getCiudades(provincia_id.value)"
+                                [textField]="'nombre'"
+                                valueField="id"
+                                 ></app-auto-complete>
+                            
                             </div>
                         </div>
                         <div class="form-group m-form__group row" *ngIf="selectUsuario == 0 && entrega.domicilio == 1">
@@ -552,13 +554,13 @@
                                 Ciudad:
                             </label>
                             <div class="col-lg-3">
-                                <select  class="form-control m-input" placeholder="Ciudad" 
-                                        [(ngModel)]="entrega.ciudad.id" #ciudad_id="ngModel" name="ciudad_id" required>
-                                    <option [value]="" disabled>Seleccione una Ciudad</option>
-                                    <option *ngFor="let ciudad of ciudades" [value]="ciudad.id" >
-                                        {{ciudad.nombre}}
-                                    </option>
-                                </select>
+                                <app-auto-complete *ngIf="ciudades" placeholder="Seleccione"
+                                [(ngModel)]="entrega.ciudad.id" #ciudad_id="ngModel"
+                                name="ciudad_id" required [items]="ciudades"
+                                [textField]="'nombre'"
+                                valueField="id"
+                                 ></app-auto-complete>
+                            
                             </div>
                             <label class="col-lg-3 col-form-label">
                                 Código Postal:
@@ -693,7 +695,7 @@
 <!--begin::View  Modal-->
 <ng-template #detallesModal let-c="close" let-d="dismiss">
     <div class="modal-header">
-        <h4 class="modal-title">Persona que retira</h4>
+        <h4 class="modal-title">Instrucción de Entrega</h4>
         <button type="button" class="close" aria-label="Close" (click)="close()">
             <span aria-hidden="true">&times;</span>
         </button>
