--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1165,7 +1165,7 @@
                 <div class="row" style="margin: 5px">
                     <h3>Artículos</h3>
                 </div>
-                <div class="table-responsive" style="width: 740px; overflow: auto;">
+                <div class="table-responsive" style="overflow: auto;">
                 <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
                     <thead>
                     <tr>
