--- a/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
@@ -87,7 +87,7 @@
                     {{articulo.tienda}}
                 </td>
                 <td>
-                  {{articulo.peso}}
+                  {{articulo.peso | number:'1.2-2' }}
                 </td>
                 <td>
                     {{articulo.precio}}
