--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -47,7 +47,7 @@
             {{articulo.tienda}}
         </td>
         <td>
-            {{articulo.peso}}
+            {{articulo.peso | number:'1.2-2' }}
         </td>
         <td>
             {{articulo.piezas}}
