--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -53,7 +53,7 @@
             {{articulo.tienda}}
         </td>
         <td>
-            {{articulo.peso}}
+            {{articulo.peso | number:'1.2-2' }}
         </td>
         <td>
             {{articulo.piezas}}
